Knginx/ingress-nginxpersonlizado.yml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
metadata:
  name: mipagina-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mipagina.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mipagina-service
                port:
                  number: 80
